tests/invalid/data_loader_provides_missing_description.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderVariablesMissingFileVariable",
    "description": "Test case: data loader variable missing required 'file_variable' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadProvides": {
      "kind": "grid",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": {
          "units": "K"
        }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
